# sql-multi-tool

./: LICENSE  README.md  README.ru.md  build.bat  dev.bat
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
