[package]
name = "sql-multi-tool"
version = "1.0.0"
description = "SQL Server Multi Tool - Restore, Manage, Backup"
authors = ["SQL Multi Tool"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "notification-all", "dialog-all", "fs-all", "path-all", "window-all"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiberius = { version = "0.12", default-features = false, features = ["tokio-rustls"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
anyhow = "1.0"
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
